--- a/localization/kor/AigisMod-Keyword-Strings.json
+++ b/localization/kor/AigisMod-Keyword-Strings.json
@@ -119,10 +119,12 @@
   {
     "PROPER_NAME": "퇴마의 부적",
     "NAMES": [
-      "퇴마의_부적",
-      "퇴마의_부적을",
+      "퇴마의 부적",
+      "퇴마의 부적을",
       "퇴마의부적",
       "퇴마의부적을",
+      "퇴마의_부적",
+      "퇴마의_부적을",
       "Seal Talisman",
       "Seal_talisman.",
       "Seal_talisman",
