--- a/localization/kor/AigisMod-Relic-Strings.json
+++ b/localization/kor/AigisMod-Relic-Strings.json
@@ -161,11 +161,11 @@
     ]
   },
   "aigisMod:DemonicTerritory": {
-    "NAME": "악마의 영역",
+    "NAME": "데모닉 테리토리",
     "FLAVOR": "라피스 : 힘을 빌려주지... 감사하게 생각하도록.",
     "DESCRIPTIONS": [
       "첫 #b5 턴간, #b1 데미지 아우라를 얻습니다.",
-      " NL 턴 종료시 #y데몬 파워 카드를 사용한 경우, 데미지 아우라 수치와 동일한 방어도를 얻습니다."
+      " NL #y데몬 파워 카드를 사용한 경우, 턴 종료시 데미지 아우라 수치와 동일한 방어도를 얻습니다."
     ]
   },
   "aigisMod:ImperialAgent": {
