--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -2602,8 +2602,8 @@
   },
   "aigisMod:Pedra": {
     "NAME": "페도라",
-    "DESCRIPTION": "턴 종료시, 덱의 저주 개수 x 2 만큼 방어도를 넣습니다.",
-    "UPGRADE_DESCRIPTION": "체력을 5 회복합니다. NL 턴 종료시, 덱의 저주 개수 x 2 만큼 방어도를 넣습니다.",
+    "DESCRIPTION": "턴 종료시, 덱의 저주 개수 x 2 만큼 방어도를 얻습니다.",
+    "UPGRADE_DESCRIPTION": "체력을 5 회복합니다. NL 턴 종료시, 덱의 저주 개수 x 2 만큼 방어도를 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
       "역점룡"
     ]
