--- a/localization/kor/AigisMod-Event-Strings.json
+++ b/localization/kor/AigisMod-Event-Strings.json
@@ -89,7 +89,7 @@
     "DESCRIPTIONS": [
       "당신은 강력한 언데드와 조우했습니다. NL 그녀는 당신의 대의에 협력하고자 하지만, 당신은 그녀를 믿지 않습니다.",
       "당신은 거래를 받아들입니다.",
-      "당신은 그녀의 목적을 이해합니다.",
+      "당신은 그녀의 목적을 이해했습니다.",
       "당신은 제안을 거절하고 여정을 계속합니다."
     ],
     "OPTIONS": [
