--- a/localization/kor/AigisMod-Relic-Strings.json
+++ b/localization/kor/AigisMod-Relic-Strings.json
@@ -301,7 +301,7 @@
     "NAME": "스크램블 골렘",
     "FLAVOR": "릴케 : 뭐라고? 네 운명을 점쳐달라고?",
     "DESCRIPTIONS": [
-      "전투당 한 번, 이 유물을 #y오른클릭하여 손패의 카드 #b1 장을 소멸시킬 수 있습니다. 그 카드가 #y골렘의 #y부품일 경우 #b3 ."
+      "전투당 한 번, 이 유물을 #y오른클릭하여 손패의 카드 #b1 장을 소멸시킬 수 있습니다. 그 카드가 #y골렘의 #y부품일 경우 #b3 금속화를 얻습니다."
     ]
   },
   "aigisMod:GolemBoost": {
